Edit pages fixes horizontal overflow Select under 350px screen width

--- a/frontend/src/components/ExperimentalAllTagsSelect/ExperimentalAllTagsSelect.module.css
+++ b/frontend/src/components/ExperimentalAllTagsSelect/ExperimentalAllTagsSelect.module.css
@@ -28,7 +28,7 @@
 /* Component functional with reduced display selected options */
 @media (max-width: 350px) {
   .selectContainer {
-    width: 16rem;
+    width: 12rem;
     margin: 0 auto;
   }
 }
